AirChat/airchat_app/airchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airchat-server
  labels:
    app: airchat-server
spec:
  ports:
  -  port: 5000
     targetPort: 5000
  selector:
    app: airchat-server
